# memes_api

./: .env-example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: Dockerfile  alembic.ini  entrypoint.sh  exceptions.py  main.py  pyproject.toml
app/db/: db.py
app/memes/: models.py  routers.py  service.py  shemas.py
app/migrations/: env.py
docker/: webapp.sh
media/: Dockerfile  entrypoint.sh  exceptions.py  main.py  minio_client.py  pyproject.toml
media/security/: auth.py
